k8s/overlays/dev/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: opsight-api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: payment-gateway
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: opsight-ai-rca
spec:
  replicas: 1
