k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: opsight
  name: opsight-api
spec:
  rules:
    - host: dev.api.opsight.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opsight-api
                port:
                  number: 8000
